Poll export status to prevent being stuck in loading status (#625)
* fix: poll export status to prevent being stuck in loading status

* refactor: move export status logic to export recipients component

* chore: get rid of unnecessary property in stats

* fix: compute wait interval using jobs updated at time

* chore: disable export for all states except Ready

* chore: restore css for refresh stats

--- a/frontend/src/components/common/progress-details/ProgressDetails.module.scss
+++ b/frontend/src/components/common/progress-details/ProgressDetails.module.scss
@@ -84,25 +84,3 @@
   @include flex-horizontal;
   justify-content: space-between;
 }
-
-.actionButton {
-  @include flex-horizontal;
-  justify-content: flex-end;
-  margin: 3rem 0;
-
-  .disableActiveState {
-    cursor: not-allowed;
-
-    &:active {
-      span,
-      i {
-        color: $indigo-blue;
-      }
-    }
-
-    &:hover {
-      border-width: 1px;
-      background-color: white;
-    }
-  }
-}
